feat: render posts

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": " next dev --turbo",
+		"contentlayer": "contentlayer dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@next/mdx": "^15.0.3",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/input": "2.2.5",
@@ -22,10 +26,15 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@types/mdx": "^2.0.13",
 		"clsx": "2.1.1",
+		"contentlayer": "^0.3.4",
+		"date-fns": "^4.1.0",
 		"framer-motion": "~11.1.1",
+		"gray-matter": "^4.0.3",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
+		"next-contentlayer": "^0.3.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
@@ -48,9 +57,9 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "4.1.4",
 		"postcss": "8.4.38",
+		"prettier": "3.3.3",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.6.3",
-		"prettier": "3.3.3"
+		"typescript": "5.6.3"
 	}
 }
