--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.15",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
