--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"framer-motion": "~11.1.1",
 		"gray-matter": "^4.0.3",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.4",
+		"next": "^14.2.4",
 		"next-contentlayer": "^0.3.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
@@ -62,5 +62,10 @@
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.6.3"
+	},
+	"overrides": {
+		"next-contentlayer": {
+			"next": "$next"
+		}
 	}
 }
